# quadcopter

./: .gitignore  README.md
core/: CMakeLists.txt  package.xml
core/launch/: core_launch.py  gazebo_launch.py
core/src/classes/: flight_controller.cpp  flight_controller.h  path.hpp  quadcopter.cpp  quadcopter.h  target.hpp  velocity.hpp
core_action/: CMakeLists.txt  package.xml
core_action/action/: FlyByVelocity.action  NavigateToTarget.action
core_action/include/core_action/: flight_action_server.hpp  path.hpp  target.hpp  velocity.hpp  velocity_action_server.hpp
core_action/launch/: flight_action_server.launch.py  velocity_action_server.launch.py
core_action/src/: advanced_flight_client.cpp  flight_action_client.cpp  flight_action_server.cpp  mixed_flight_mission.cpp  velocity_action_client.cpp  velocity_action_server.cpp
core_mini/: CMakeLists.txt  README.md  package.xml
core_mini/launch/: core_mini_launch.py
core_mini/src/: quadcopter_mini.cpp  simple_types.hpp
core_rs/: Cargo.toml  package.xml
core_rs/launch/: gazebo.py
core_rs/src/: flight_controller.rs  main.rs  path.rs  quadcopter.rs  target.rs  velocity.rs
core_rs/src/fsm/: mod.rs  state.rs  state_machine.rs
core_rs/src/trajectory/: mod.rs  path.rs  target.rs  velocity.rs
cv_tools/: CMakeLists.txt  package.xml
cv_tools/include/: cv_functions.hpp  cv_pipeline.hpp  cv_tools.hpp  d435.h  vision_node.h
cv_tools/msg/: Vision.msg  VisionMsg.msg
cv_tools/src/: cv_fuctions.hpp  cv_pipline.hpp  cv_tools.cpp  cv_tools.hpp  d435.cpp  vision_new.cpp  vision_node.cpp
doc/: 4.开始写一个话题.md  ros2.md
mcv_rs/: Cargo.toml  package.xml
mcv_rs/src/: cvbridge_rs.rs  cvchain.rs  d435_node.rs  main.rs  vision_node.rs
messages/: CMakeLists.txt  package.xml
messages/msg/: Vision.msg
ros2_tools/: CMakeLists.txt  package.xml
ros2_tools/scripts/: Image2h264.py  camera.py  show_h264.py
ros2_tools/src/: d435_node.cpp  ground_camera_node.cpp  lidar_data_node.cpp  lidar_to_px4_bridge.cpp
vision/: Cargo.toml  package.xml
vision/src/: cvchain.rs  d435_node.rs  d435_process.rs  main.rs  vision_node.rs
vision_py/: CMakeLists.txt  package.xml  setup.cfg  setup.py
vision_py/scripts/: __init__.py  cv_tools.py  vision_node.py
yolip/: .gitignore  backup.py  clip_test.py  list_cn.yaml  list_en.yaml  main.py  package.xml  setup.cfg  setup.py
yolip/scripts/: clip.py  utils.py  yolo.py
yolip/yolip/: .gitignore  __init__.py  clip_test.py  cv_test.py  list_cn.yaml  old.py
yolip/yolip/scripts/: clip.py  main.py  utils.py  yolo.py
