[package]
name = "core_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name="main_node"
path="src/main.rs"

[dependencies]
rclrs = "*"
anyhow = "*"
std_msgs = "*"
mavros_msgs = "*"
geometry_msgs = "*"
ros2_tools =  "*"
vision_py = "*"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }

[package.metadata.ros]
install_to_share = ["launch"]