[package]
name = "mcv_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name="mcv_node"
path="src/main.rs"

[dependencies]
rclrs = "*"
anyhow = "*"
sensor_msgs = "*"
std_msgs = "*"
cv_tools = { path = "../install/cv_tools/share/cv_tools/rust" }

[dependencies.opencv]
version = "0.95"
features = ["clang-runtime"]
