<package format="3">
  <name>vision</name>
  <version>1.0.0</version>
  <description>TODO: A opencv-rust pkg</description>
  <maintainer email="Hiromichi123@qq.com">Hiromichi</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclrs</depend>
  <depend>anyhow</depend>
  <depend>opencv</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>messages</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>